# covergen

./: .env.example  .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt
covergen/: __init__.py  __main__.py  cli.py  context.py  contrast.py  decorations.py  exporter.py  formats.py  generator.py  models.py  renderer.py  themes.py
covergen/templates/: cover.html.j2
examples/: config.example.json
