[project]
name = "covergen"
version = "0.1.0"
description = "Generador modular de carátulas imprimibles para cuadernos y carpetas."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Adrian Valarezo" }]
license = { text = "MIT" }
keywords = ["pdf", "print", "education", "weasyprint", "jinja2"]

dependencies = [
    "pydantic>=2.6,<3",
    "jinja2>=3.1,<4",
    "weasyprint>=62.0",
    "typer>=0.12,<1",
    "rich>=13.7",
    "streamlit>=1.35",
    "replicate>=0.25.0",
    "Pillow>=10.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[project.scripts]
covergen = "covergen.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["covergen*"]

[tool.setuptools.package-data]
covergen = ["templates/*.j2"]
